deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"api","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"api"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"api"}},"spec":{"containers":[{"env":[{"name":"MODULE_NAME","value":"main"}],"image":"tiangolo/uvicorn-gunicorn-fastapi:python3.11","imagePullPolicy":"IfNotPresent","livenessProbe":{"httpGe [...]
  creationTimestamp: "2026-04-28T05:49:01Z"
  generation: 10
  name: api
  namespace: default
  resourceVersion: "35187"
  uid: 2979a32a-5a19-4e1b-b5a6-26338cfbd419
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-29T13:34:25+02:00"
      labels:
        app: api
    spec:
      containers:
      - env:
        - name: MODULE_NAME
          value: main
        image: tiangolo/uvicorn-gunicorn-fastapi:python3.11
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: api
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app
          name: code
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: api-code
        name: code
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-04-28T05:50:20Z"
    lastUpdateTime: "2026-04-28T05:50:20Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-29T11:09:36Z"
    lastUpdateTime: "2026-04-29T11:34:43Z"
    message: ReplicaSet "api-748b7469c7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 10
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
