service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-04-28T14:15:17Z"
  name: api
  namespace: default
  resourceVersion: "11675"
  uid: a145fef0-dac0-453c-b80d-bed041cbe46c
spec:
  clusterIP: 10.43.214.243
  clusterIPs:
  - 10.43.214.243
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
